# commander.ai

./: .claude.md  .claudeignore  .env.example  .gitignore  =3.10.0  AGENT_TASKS.md  BUGS.md  CHANGES.md  CLAUDE.md  CLOUDDEPLOY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Commander_ai_Project_Plan.md  DEFERRED_FEATURES.md  GITHUB_TOPICS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  KNOWN_ISSUES.md  LICENSE  NEXT.md  NOTICE  PERFORMANCE_SYSTEM_GUIDE.md  PHASE1_TEST_RESULTS.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE_3B_3C_PLAN.md  PROJECT_OBEJCTVE.md  PROMPT_ARCHITECTURE.md  README.md  README_PHASE3.md  SCHEDULER_IMPLEMENTATION_COMPLETE.md  SECURITY.md  TESTING.md  TEST_RESULTS_PHASES_2_3.md  alembic.ini  clean_shutdown.sh  docker-compose.yml  image_generate_analyze_upscale.py  (+7 more)
.claude/: CLAUDE-activeContext.md  CLAUDE-config-variables.md  CLAUDE-decisions.md  CLAUDE-patterns.md  CLAUDE-troubleshooting.md  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
backend/: .env.example
backend/api/: main.py  websocket.py
backend/auth/: __init__.py  dependencies.py  models.py  routes.py  schemas.py  security.py
backend/core/: category_classifier.py  command_executor.py  command_parser.py  command_queue.py  config.py  database.py  dependencies.py  execution_tracker.py  intelligent_router.py  llm_factory.py  performance_evaluator.py  prompt_engineer.py  reward_system.py  scheduler.py  task_callback.py  token_tracker.py
backend/jobs/: __init__.py  cache_cleanup.py  model_deprecation_checker.py  peer_evaluation.py  scheduled_command_job.py  stats_aggregation.py
backend/memory/: document_store.py  long_term.py  memory_service.py  schemas.py  short_term.py  vector_store.py
backend/models/: agent_model_models.py  base.py  (+5 more)
dev_tests/: test_agents.py  test_llm_agents.py  test_setup.py
frontend/: README.md  package-lock.json  package.json
migrations/: 001_initial_schema.sql  001_initial_schema.sql.bak  env.py
scripts/: README.md  generate_test_performance_data.py  seed_prompts.py
tests/: __init__.py  conftest.py
(+164 files in other folders)
