[project]
name = "commander-ai"
version = "0.1.1"
description = "Interactive Interface to delegate work to Agents and Sub Agents, by name, role, or context"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core LangChain & LangGraph
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-core>=1.0.0",
    # Data validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # Environment
    "python-dotenv>=1.0",
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "python-multipart>=0.0.9",
    # Database - PostgreSQL
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "greenlet>=3.0",
    # Database - Redis
    "redis[asyncio]>=5.0",
    # Vector Store - Qdrant
    "qdrant-client>=1.11.0",
    # OpenAI for embeddings and LLM
    "openai>=1.0",
    # HTTP client
    "httpx>=0.27.0",
    # Utilities
    "python-dateutil>=2.8",
    "black>=26.1.0",
    "isort>=7.0.0",
    # Document Processing
    "langchain-community>=0.3.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "docx2txt>=0.8",
    # Web Search
    "tavily-python>=0.5.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",

    # Type checking
    "mypy>=1.8",

    # Linting and formatting
    "ruff>=0.3.0",
    "black>=24.0",

    # Development tools
    "ipython>=8.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
python_files = "test_*.py"
python_functions = "test_*"
